feat : Adds Sliding Up Panel Test.

--- a/AndroidUIComponent/app/src/main/res/values/strings.xml
+++ b/AndroidUIComponent/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">AndroidUIComponent</string>
     <string name="recyclerView_activity">RecyclerView Activity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Index Table Fragment</string>
 </resources>
